--- a/package.json
+++ b/package.json
@@ -1,37 +1,55 @@
 {
-  "name": "ngx-mds-icon",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^14.1.0",
-    "@angular/common": "^14.1.0",
-    "@angular/compiler": "^14.1.0",
-    "@angular/core": "^14.1.0",
-    "@angular/forms": "^14.1.0",
-    "@angular/platform-browser": "^14.1.0",
-    "@angular/platform-browser-dynamic": "^14.1.0",
-    "@angular/router": "^14.1.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular/cli": "~14.1.3",
-    "@angular/compiler-cli": "^14.1.0",
-    "@types/jasmine": "~4.0.0",
-    "jasmine-core": "~4.2.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.7.2"
-  }
+   "name": "ngx-md-icon-demo",
+   "version": "0.0.0",
+   "scripts": {
+      "ng": "ng",
+      "start": "ng serve",
+      "build": "ng build",
+      "build:demo": "ng build demo",
+      "build:lib": "ng build ngx-md-icon",
+      "publish": "npm run build:lib && cd dist/ngx-md-icon && npm publish",
+      "watch": "ng build --watch --configuration development",
+      "test": "ng test",
+      "lint": "ng lint"
+   },
+   "private": true,
+   "dependencies": {
+      "@angular/animations": "^14.1.0",
+      "@angular/common": "^14.1.0",
+      "@angular/compiler": "^14.1.0",
+      "@angular/core": "^14.1.0",
+      "@angular/forms": "^14.1.0",
+      "@angular/platform-browser": "^14.1.0",
+      "@angular/platform-browser-dynamic": "^14.1.0",
+      "@angular/router": "^14.1.0",
+      "@mdi/js": "^7.0.96",
+      "rxjs": "~7.5.0",
+      "tslib": "^2.3.0",
+      "zone.js": "~0.11.4"
+   },
+   "devDependencies": {
+      "@angular-devkit/build-angular": "^14.1.3",
+      "@angular-eslint/builder": "14.1.2",
+      "@angular-eslint/eslint-plugin": "14.1.2",
+      "@angular-eslint/eslint-plugin-template": "14.1.2",
+      "@angular-eslint/schematics": "14.1.2",
+      "@angular-eslint/template-parser": "14.1.2",
+      "@angular/cli": "~14.1.3",
+      "@angular/compiler-cli": "^14.1.0",
+      "@types/jasmine": "~4.0.0",
+      "@typescript-eslint/eslint-plugin": "^5.37.0",
+      "@typescript-eslint/parser": "5.37.0",
+      "eslint": "^8.23.1",
+      "eslint-plugin-jsdoc": "^39.6.2",
+      "jasmine-core": "~4.2.0",
+      "karma": "~6.4.0",
+      "karma-chrome-launcher": "~3.1.0",
+      "karma-coverage": "~2.2.0",
+      "karma-jasmine": "~5.1.0",
+      "karma-jasmine-html-reporter": "~2.0.0",
+      "ng-packagr": "^14.1.0",
+      "prettier": "^2.7.1",
+      "prettier-plugin-organize-imports": "^3.1.1",
+      "typescript": "~4.7.2"
+   }
 }
