--- a/angular.json
+++ b/angular.json
@@ -75,6 +75,7 @@
                "configurations": {
                   "production": {
                      "outputPath": "docs",
+                     "baseHref": "/ngx-md-icon/",
                      "budgets": [
                         {
                            "type": "initial",
