--- a/angular.json
+++ b/angular.json
@@ -1,153 +1,177 @@
 {
-   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-   "version": 1,
-   "newProjectRoot": "projects",
-   "schematics": {
-      "@schematics/angular:component": {
-         "style": "scss",
-         "skipTests": true,
-         "standalone": true,
-         "changeDetection": "OnPush"
-      }
-   },
-   "projects": {
-      "ngx-md-icon": {
-         "projectType": "library",
-         "root": "projects/ngx-md-icon",
-         "sourceRoot": "projects/ngx-md-icon/src",
-         "prefix": "lib",
-         "architect": {
-            "build": {
-               "builder": "@angular-devkit/build-angular:ng-packagr",
-               "options": {
-                  "project": "projects/ngx-md-icon/ng-package.json"
-               },
-               "configurations": {
-                  "production": {
-                     "tsConfig": "projects/ngx-md-icon/tsconfig.lib.prod.json"
-                  },
-                  "development": {
-                     "tsConfig": "projects/ngx-md-icon/tsconfig.lib.json"
-                  }
-               },
-               "defaultConfiguration": "production"
+  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "version": 1,
+  "newProjectRoot": "projects",
+  "schematics": {
+    "@schematics/angular:component": {
+      "style": "scss",
+      "skipTests": true,
+      "standalone": true,
+      "changeDetection": "OnPush"
+    },
+    "@angular-eslint/schematics:application": {
+      "setParserOptionsProject": true
+    },
+    "@angular-eslint/schematics:library": {
+      "setParserOptionsProject": true
+    }
+  },
+  "projects": {
+    "ngx-md-icon": {
+      "projectType": "library",
+      "root": "projects/ngx-md-icon",
+      "sourceRoot": "projects/ngx-md-icon/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/ngx-md-icon/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/ngx-md-icon/tsconfig.lib.prod.json"
             },
-            "test": {
-               "builder": "@angular-devkit/build-angular:karma",
-               "options": {
-                  "main": "projects/ngx-md-icon/src/test.ts",
-                  "tsConfig": "projects/ngx-md-icon/tsconfig.spec.json",
-                  "karmaConfig": "projects/ngx-md-icon/karma.conf.js"
-               }
-            },
-            "lint": {
-               "builder": "@angular-eslint/builder:lint",
-               "options": {
-                  "lintFilePatterns": ["projects/ngx-md-icon/**/*.ts", "projects/ngx-md-icon/**/*.html"]
-               }
+            "development": {
+              "tsConfig": "projects/ngx-md-icon/tsconfig.lib.json"
             }
-         }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/ngx-md-icon/src/test.ts",
+            "tsConfig": "projects/ngx-md-icon/tsconfig.spec.json",
+            "karmaConfig": "projects/ngx-md-icon/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "projects/ngx-md-icon/**/*.ts",
+              "projects/ngx-md-icon/**/*.html"
+            ]
+          }
+        }
+      }
+    },
+    "demo": {
+      "projectType": "application",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
       },
-      "demo": {
-         "projectType": "application",
-         "schematics": {
-            "@schematics/angular:component": {
-               "style": "scss"
+      "root": "projects/demo",
+      "sourceRoot": "projects/demo/src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/demo",
+            "index": "projects/demo/src/index.html",
+            "main": "projects/demo/src/main.ts",
+            "polyfills": "projects/demo/src/polyfills.ts",
+            "tsConfig": "projects/demo/tsconfig.app.json",
+            "inlineStyleLanguage": "scss",
+            "assets": [
+              "projects/demo/src/favicon.ico",
+              "projects/demo/src/assets"
+            ],
+            "styles": [
+              "projects/demo/src/styles.scss"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "outputPath": "docs",
+              "baseHref": "/ngx-md-icon/",
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "projects/demo/src/environments/environment.ts",
+                  "with": "projects/demo/src/environments/environment.prod.ts"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
             }
-         },
-         "root": "projects/demo",
-         "sourceRoot": "projects/demo/src",
-         "prefix": "app",
-         "architect": {
-            "build": {
-               "builder": "@angular-devkit/build-angular:browser",
-               "options": {
-                  "outputPath": "dist/demo",
-                  "index": "projects/demo/src/index.html",
-                  "main": "projects/demo/src/main.ts",
-                  "polyfills": "projects/demo/src/polyfills.ts",
-                  "tsConfig": "projects/demo/tsconfig.app.json",
-                  "inlineStyleLanguage": "scss",
-                  "assets": ["projects/demo/src/favicon.ico", "projects/demo/src/assets"],
-                  "styles": ["projects/demo/src/styles.scss"],
-                  "scripts": []
-               },
-               "configurations": {
-                  "production": {
-                     "outputPath": "docs",
-                     "baseHref": "/ngx-md-icon/",
-                     "budgets": [
-                        {
-                           "type": "initial",
-                           "maximumWarning": "500kb",
-                           "maximumError": "1mb"
-                        },
-                        {
-                           "type": "anyComponentStyle",
-                           "maximumWarning": "2kb",
-                           "maximumError": "4kb"
-                        }
-                     ],
-                     "fileReplacements": [
-                        {
-                           "replace": "projects/demo/src/environments/environment.ts",
-                           "with": "projects/demo/src/environments/environment.prod.ts"
-                        }
-                     ],
-                     "outputHashing": "all"
-                  },
-                  "development": {
-                     "buildOptimizer": false,
-                     "optimization": false,
-                     "vendorChunk": true,
-                     "extractLicenses": false,
-                     "sourceMap": true,
-                     "namedChunks": true
-                  }
-               },
-               "defaultConfiguration": "production"
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "configurations": {
+            "production": {
+              "browserTarget": "demo:build:production"
             },
-            "serve": {
-               "builder": "@angular-devkit/build-angular:dev-server",
-               "configurations": {
-                  "production": {
-                     "browserTarget": "demo:build:production"
-                  },
-                  "development": {
-                     "browserTarget": "demo:build:development"
-                  }
-               },
-               "defaultConfiguration": "development"
-            },
-            "extract-i18n": {
-               "builder": "@angular-devkit/build-angular:extract-i18n",
-               "options": {
-                  "browserTarget": "demo:build"
-               }
-            },
-            "test": {
-               "builder": "@angular-devkit/build-angular:karma",
-               "options": {
-                  "main": "projects/demo/src/test.ts",
-                  "polyfills": "projects/demo/src/polyfills.ts",
-                  "tsConfig": "projects/demo/tsconfig.spec.json",
-                  "karmaConfig": "projects/demo/karma.conf.js",
-                  "inlineStyleLanguage": "scss",
-                  "assets": ["projects/demo/src/favicon.ico", "projects/demo/src/assets"],
-                  "styles": ["projects/demo/src/styles.scss"],
-                  "scripts": []
-               }
-            },
-            "lint": {
-               "builder": "@angular-eslint/builder:lint",
-               "options": {
-                  "lintFilePatterns": ["projects/demo/**/*.ts", "projects/demo/**/*.html"]
-               }
+            "development": {
+              "browserTarget": "demo:build:development"
             }
-         }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "demo:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/demo/src/test.ts",
+            "polyfills": "projects/demo/src/polyfills.ts",
+            "tsConfig": "projects/demo/tsconfig.spec.json",
+            "karmaConfig": "projects/demo/karma.conf.js",
+            "inlineStyleLanguage": "scss",
+            "assets": [
+              "projects/demo/src/favicon.ico",
+              "projects/demo/src/assets"
+            ],
+            "styles": [
+              "projects/demo/src/styles.scss"
+            ],
+            "scripts": []
+          }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "projects/demo/**/*.ts",
+              "projects/demo/**/*.html"
+            ]
+          }
+        }
       }
-   },
-   "cli": {
-      "schematicCollections": ["@angular-eslint/schematics"]
-   }
+    }
+  },
+  "cli": {
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
+  }
 }
