--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port 4201",
     "build": "ng build",
-    "build:demo": "ng build demo",
+    "build:demo": "ng build ngx-md-icon-demo",
     "build:lib": "ng build ngx-md-icon",
-    "publish": "npm run build demo && npm run build:lib && cd dist/ngx-md-icon && npm publish",
+    "publish": "npm run build:demo && npm run build:lib && cd dist/ngx-md-icon && npm publish",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint"
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "^15.0.1",
     "@angular/router": "^15.0.1",
     "@mdi/js": "^7.0.96",
+    "normalize.css": "^8.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
