--- a/projects/ngx-md-icon/package.json
+++ b/projects/ngx-md-icon/package.json
@@ -1,6 +1,6 @@
 {
    "name": "ngx-md-icon",
-   "version": "1.1.14",
+   "version": "1.1.15",
    "description": "Easily use Material Design Icons @mdi/js with Angular",
    "author": "Jonas Gnioui <btxtiger@icloud.com>",
    "license": "MIT",
@@ -16,6 +16,9 @@
       "mds-icon",
       "material icons"
    ],
-   "peerDependencies": {},
+   "peerDependencies": {
+      "@angular/common": "10 - 100",
+      "@angular/core": "10 - 100"
+   },
    "dependencies": {}
 }
