--- a/projects/ngx-md-icon/package.json
+++ b/projects/ngx-md-icon/package.json
@@ -1,6 +1,6 @@
 {
    "name": "ngx-md-icon",
-   "version": "1.1.15",
+   "version": "1.1.16",
    "description": "Easily use Material Design Icons @mdi/js with Angular",
    "author": "Jonas Gnioui <btxtiger@icloud.com>",
    "license": "MIT",
@@ -20,5 +20,7 @@
       "@angular/common": "10 - 100",
       "@angular/core": "10 - 100"
    },
-   "dependencies": {}
+   "dependencies": {
+      "tslib": "^2.3.0"
+   }
 }
