--- a/package.json
+++ b/package.json
@@ -14,45 +14,45 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.0.1",
-    "@angular/cdk": "^15.0.0",
-    "@angular/common": "^15.0.1",
-    "@angular/compiler": "^15.0.1",
-    "@angular/core": "^15.0.1",
-    "@angular/forms": "^15.0.1",
-    "@angular/material": "^15.0.0",
-    "@angular/platform-browser": "^15.0.1",
-    "@angular/platform-browser-dynamic": "^15.0.1",
-    "@angular/router": "^15.0.1",
-    "@mdi/js": "^7.0.96",
+    "@angular/animations": "^15.2.3",
+    "@angular/cdk": "^15.2.3",
+    "@angular/common": "^15.2.3",
+    "@angular/compiler": "^15.2.3",
+    "@angular/core": "^15.2.3",
+    "@angular/forms": "^15.2.3",
+    "@angular/material": "^15.2.3",
+    "@angular/platform-browser": "^15.2.3",
+    "@angular/platform-browser-dynamic": "^15.2.3",
+    "@angular/router": "^15.2.3",
+    "@mdi/js": "^7.2.96",
     "normalize.css": "^8.0.1",
     "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "tslib": "^2.5.0",
+    "zone.js": "^0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.0.1",
-    "@angular-eslint/builder": "15.0.0",
-    "@angular-eslint/eslint-plugin": "15.0.0",
-    "@angular-eslint/eslint-plugin-template": "15.0.0",
-    "@angular-eslint/schematics": "15.0.0",
-    "@angular-eslint/template-parser": "15.0.0",
-    "@angular/cli": "~15.0.1",
-    "@angular/compiler-cli": "^15.0.1",
-    "@types/jasmine": "~4.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.43.0",
-    "eslint": "^8.28.0",
-    "eslint-plugin-jsdoc": "^39.6.2",
-    "jasmine-core": "~4.2.0",
+    "@angular-devkit/build-angular": "^15.2.4",
+    "@angular-eslint/builder": "^15.2.1",
+    "@angular-eslint/eslint-plugin": "^15.2.1",
+    "@angular-eslint/eslint-plugin-template": "^15.2.1",
+    "@angular-eslint/schematics": "^15.2.1",
+    "@angular-eslint/template-parser": "^15.2.1",
+    "@angular/cli": "^15.2.4",
+    "@angular/compiler-cli": "^15.2.3",
+    "@types/jasmine": "^4.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
+    "eslint": "^8.36.0",
+    "eslint-plugin-jsdoc": "^40.1.0",
+    "jasmine-core": "^4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "ng-packagr": "^15.0.1",
-    "prettier": "^2.7.1",
-    "prettier-plugin-organize-imports": "^3.1.1",
+    "ng-packagr": "^15.2.2",
+    "prettier": "^2.8.6",
+    "prettier-plugin-organize-imports": "^3.2.2",
     "typescript": "~4.8.4"
   }
 }
